# banking-system

./: Cargo.toml  README.md
.github/workflows/: tests.yml
examples/: erroneous_accounts.csv  erroneous_transactions.csv  fractional_accounts.csv  fractional_transactions.csv  simple_accounts.csv  simple_transactions.csv
src/: cli.rs  dispatcher.rs  logging.rs  main.rs  tests.rs
src/database/: account.rs  memdb.rs  mod.rs  transfer.rs
src/transactions/: chargeback.rs  deposit.rs  dispute.rs  errors.rs  mod.rs  resolve.rs  transaction.rs  withdrawal.rs
src/transport/: exporter.rs  importer.rs  mod.rs  record.rs
