[package]
name = "banking_system"
version = "0.1.0"
authors = ["Grzegorz Krason <grzegorz.krason@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.22", features = ["cargo", "derive"] }
csv = "1.3.1"
derive-new = "0.7.0"
log = "0.4.22"
rust_decimal = "1.36.0"
serde = { version = "1.0.215", features = ["serde_derive"] }
simplelog = "0.12.2"
thiserror = "2.0.5"

[dev-dependencies]
ctor = "0.2.9"
